--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                         <strong>Prossime classi</strong>
                                     </div>
                                     <div class="m-3">
-                                        <table class="table table-hover">
+                                        <table class="table table-hover align-middle">
                                             <thead>
                                                 <tr class="text-center">
                                                     <th class="text-start col-xxl-7 col-xl-6" scope="col">Nome</th>
@@ -149,8 +149,8 @@
                                             </thead>
                                             <tbody>
                                                 <tr class="text-center">
-                                                    <td class="text-start">
-                                                        <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    <td class="text-start text-nowrap">
+                                                        <img class="img-fluid d-none d-sm-inline d-none d-sm-inline" src="./img/class-avatar.jpg" alt="codeImg">
                                                         Classe 75
                                                     </td>
                                                     <td class="d-none d-sm-table-cell">15 Feb 2021</td>
@@ -159,17 +159,17 @@
                                                         <span class="badge text-bg-success">Done</span>
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-pencil"></i>
                                                         </button>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-trash"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="text-center">
-                                                    <td class="text-start">
-                                                        <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    <td class="text-start text-nowrap">
+                                                        <img class="img-fluid d-none d-sm-inline" src="./img/class-avatar.jpg" alt="codeImg">
                                                         Classe 76
                                                     </td>
                                                     <td class="d-none d-sm-table-cell">16 Feb 2021</td>
@@ -178,17 +178,17 @@
                                                         <span class="badge text-bg-success">Done</span>
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-pencil"></i>
                                                         </button>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-trash"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="text-center">
-                                                    <td class="text-start">
-                                                        <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    <td class="text-start text-nowrap">
+                                                        <img class="img-fluid d-none d-sm-inline" src="./img/class-avatar.jpg" alt="codeImg">
                                                         Classe 77
                                                     </td>
                                                     <td class="d-none d-sm-table-cell">17 Feb 2021</td>
@@ -197,17 +197,17 @@
                                                         <span class="badge text-bg-warning text-white">Process</span>
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-pencil"></i>
                                                         </button>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-trash"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="text-center">
-                                                    <td class="text-start">
-                                                        <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    <td class="text-start text-nowrap">
+                                                        <img class="img-fluid d-none d-sm-inline" src="./img/class-avatar.jpg" alt="codeImg">
                                                         Classe 78
                                                     </td>
                                                     <td class="d-none d-sm-table-cell">18 Feb 2021</td>
@@ -216,17 +216,17 @@
                                                         <span class="badge text-bg-success">Done</span>
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-pencil"></i>
                                                         </button>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-trash"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="text-center">
-                                                    <td class="text-start">
-                                                        <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    <td class="text-start text-nowrap">
+                                                        <img class="img-fluid d-none d-sm-inline" src="./img/class-avatar.jpg" alt="codeImg">
                                                         Classe 79
                                                     </td>
                                                     <td class="d-none d-sm-table-cell">19 Feb 2021</td>
@@ -235,17 +235,17 @@
                                                         <span class="badge text-bg-danger">Failed</span>
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-pencil"></i>
                                                         </button>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-trash"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="text-center">
-                                                    <td class="text-start">
-                                                        <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    <td class="text-start text-nowrap">
+                                                        <img class="img-fluid d-none d-sm-inline" src="./img/class-avatar.jpg" alt="codeImg">
                                                         Classe 80
                                                     </td>
                                                     <td class="d-none d-sm-table-cell">20 Feb 2021</td>
@@ -254,17 +254,17 @@
                                                         <span class="badge text-bg-success">Done</span>
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-pencil"></i>
                                                         </button>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-trash"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="text-center">
-                                                    <td class="text-start">
-                                                        <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    <td class="text-start text-nowrap">
+                                                        <img class="img-fluid d-none d-sm-inline" src="./img/class-avatar.jpg" alt="codeImg">
                                                         Classe 81
                                                     </td>
                                                     <td class="d-none d-sm-table-cell">21 Feb 2021</td>
@@ -273,17 +273,17 @@
                                                         <span class="badge text-bg-danger">Failed</span>
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-pencil"></i>
                                                         </button>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-trash"></i>
                                                         </button>
                                                     </td>
                                                 </tr>
                                                 <tr class="text-center">
-                                                    <td class="text-start">
-                                                        <img class="img-fluid" src="./img/class-avatar.jpg" alt="codeImg">
+                                                    <td class="text-start text-nowrap">
+                                                        <img class="img-fluid d-none d-sm-inline" src="./img/class-avatar.jpg" alt="codeImg">
                                                         Classe 82
                                                     </td>
                                                     <td class="d-none d-sm-table-cell">22 Feb 2021</td>
@@ -292,10 +292,10 @@
                                                         <span class="badge text-bg-success">Done</span>
                                                     </td>
                                                     <td>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-pencil"></i>
                                                         </button>
-                                                        <button class="btn btn-outline-secondary">
+                                                        <button class="btn btn-outline-secondary my-1">
                                                             <i class="fa-solid fa-trash"></i>
                                                         </button>
                                                     </td>
